--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <div class="header">
         <h1 class="title">TetriZ</h1>
+        <div id="timer"></div>
         <div id="score"></div>
     </div>
     
