--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TetriZ</title>
-    <link href="/dist/index.css" rel="stylesheet">
+    <link href="./dist/index.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     
 </head>
 <body>
-    <audio id="song" src="dist/Tetris Theme (Dubstep Remix).mp3"></audio>
+    <audio id="song" src="./dist/Tetris Theme (Dubstep Remix).mp3"></audio>
     <div class="description">
         <p>"No one is coming for us! What are we going to do?! Wait... do you hear something?"</p>
         <p class="instructions">Use the 'z' and 'x' keys to rotate. Use the 'left' and 'right' keys to position. Use the 'down' key for speed dropping.
@@ -24,7 +24,7 @@
     
     <div class="main-content">
         <canvas id="grid" width="240" height="400"></canvas>
-        <script src="dist/main.js"></script>
+        <script src="./dist/main.js"></script>
     </div>
 </body>
 </html>
