--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link href="./dist/index.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     
+    <meta property="og:title" content="TetriZ" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://eric-2311.github.io/TetriZ-v1.0/" />
+    <meta property="og:image" content="https://eric-2311.github.io/TetriZ-v1.0/" />
+
 </head>
 <body>
     <audio id="song" src="./dist/Tetris Theme (Dubstep Remix).mp3"></audio>
