fix preview pic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="TetriZ" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://eric-2311.github.io/TetriZ-v1.0/" />
-    <meta property="og:image" content="https://eric-2311.github.io/TetriZ-v1.0/" />
+    <meta property="og:image" content="https://eric-2311.github.io/TetriZ-v1.0/dist/preview.png" />
 
 </head>
 <body>
